...

                <LinearLayout
                    android:id="@+id/container1"
                    android:orientation="vertical"
                    android:padding="@dimen/dp16"
...
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/regist_name"
                        android:hint="John Doe"
                        android:inputType="textPersonName"
...

                    <RadioGroup
                        android:id="@+id/rgJenisKelamin"
                        android:layout_width="match_parent"
                        android:weightSum="1"
...

                        <RadioButton
                            android:id="@+id/rbPria"
                            android:text="Laki-laki"
                            android:textSize="@dimen/fontNormal"
                            android:layout_weight="0.5"
...

                    <TextView
                        android:id="@+id/regist_dateBirth"
                        android:drawablePadding="5dp"
                        android:layout_marginTop="@dimen/_5sdp"
...

                    <EditText
                        android:id="@+id/regist_tempatLahir"
                        android:hint="Jakarta"
                        android:inputType="textPersonName"
...

                    <EditText
                        android:id="@+id/regist_namaIbu"
                        android:hint="Wulan Guritna"
                        android:inputType="textPersonName"
...

                <LinearLayout
                    android:id="@+id/container3"
                    android:orientation="vertical"
                    android:padding="@dimen/dp16"
...

                    <EditText
                        android:id="@+id/regist_alamatDomisili"
                        android:inputType="textMultiLine"
                        android:lines="2"
...
                        android:layout_height="wrap_content" />
                    <Spinner
                        android:id="@+id/spProvinsi"
                        android:background="@drawable/spinner_bg_default"
                        android:imeOptions="actionNext"
...
                        android:layout_height="wrap_content" />
                    <Spinner
                        android:id="@+id/spKota"
                        android:textSize="@dimen/fontNormal"
                        android:background="@drawable/spinner_bg_default"
...
                        android:layout_height="wrap_content" />
                    <Spinner
                        android:id="@+id/spKecamatan"
                        android:textSize="@dimen/fontNormal"
                        android:background="@drawable/spinner_bg_default"
...
                        android:layout_height="wrap_content" />
                    <Spinner
                        android:id="@+id/spKelurahan"
                        android:textSize="@dimen/fontNormal"
                        android:visibility="gone"
...

                    <LinearLayout
                        android:id="@+id/lyRayon"
                        android:visibility="gone"
                        android:orientation="vertical"
...

                            <EditText
                                android:id="@+id/regist_rt"
                                android:hint="001"
                                android:inputType="number"
...

                            <EditText
                                android:id="@+id/regist_rw"
                                android:hint="001"
                                android:maxLength="3"
...

                    <EditText
                        android:id="@+id/regist_phoneBorrower"
                        android:inputType="phone"
                        android:imeOptions="actionNext"
...

                        <EditText
                            android:id="@+id/regist_lamaMenempatiRumah"
                            android:inputType="number"
                            android:hint="0"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNext"
                android:text="Selanjutnya"
                android:layout_margin="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_14sdp"
...
