...
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp20"
            app:cardElevation="3dp">

            <LinearLayout
                android:id="@+id/container4"
                android:orientation="vertical"
                android:padding="@dimen/_16sdp"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

...
                    android:text="Jenis Pekerjaan"
                    android:textColor="@color/colorAsiraText"
                    android:textSize="@dimen/fontLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/spJenisPekerjaan"
                    android:textSize="@dimen/fontNormal"
                    android:background="@drawable/spinner_bg_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="Autofill" />

...
                    android:textColor="@color/colorAsiraText"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textSize="@dimen/fontLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/etEmployeeID"
                    android:hint="16000939877399"
                    android:backgroundTint="@color/colorAsiraText"
                    android:imeOptions="actionNext"
                    android:textSize="@dimen/fontNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:textColor="@color/colorAsiraText"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textSize="@dimen/fontLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/etCompanyName"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:textSize="@dimen/fontNormal"
                    android:backgroundTint="@color/colorAsiraText"
                    android:hint="PT ABC"
                    android:layout_width="match_parent"
...
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etLamaBekerja"
                        android:inputType="number"
                        android:hint="0"
                        android:imeOptions="actionNext"
                        android:backgroundTint="@color/colorAsiraText"
                        android:textSize="@dimen/fontNormal"
                        android:layout_width="60dp"
...
                    android:textColor="@color/colorAsiraText"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textSize="@dimen/fontLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/etAlamatKantor"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:hint="Tulis disini..."
                    android:gravity="top"
                    android:backgroundTint="@color/colorAsiraText"
                    android:imeOptions="actionNext"
...
                    android:textSize="@dimen/fontLarge"
                    android:textColor="@color/colorAsiraText"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/etCompanyPhone"
                    android:inputType="phone"
                    android:hint="02112345678"
                    android:imeOptions="actionNext"
                    android:textSize="@dimen/fontNormal"
                    android:backgroundTint="@color/colorAsiraText"
                    android:textStyle="bold"
...
