...
            android:layout_weight="1"
            android:src="@drawable/indicator_page" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/svMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/progress_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="?attr/selectableItemBackground">

                        <ImageView
                            android:id="@+id/imgKTP"
                            android:layout_width="match_parent"
                            android:layout_height="125dp"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/bg_input_photo"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_photo_camera" />
...
                            android:layout_height="wrap_content"
                            android:text="Input Nomor KTP"
                            android:textColor="@color/textColorAsira"
                            android:textSize="@dimen/fontNormal" />

                        <EditText
                            android:id="@+id/etKTP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorAsiraText"
                            android:textStyle="bold"
                            android:hint="1500099923888"
                            android:imeOptions="actionNext"
...
                        android:layout_height="wrap_content"
                        android:text="Email"
                        android:textColor="@color/textColorAsira"
                        android:textSize="@dimen/fontLarge" />

                    <EditText
                        android:id="@+id/regist_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorAsiraText"
                        android:textStyle="bold"
                        android:hint="adrian@lorenzo.com"
                        android:imeOptions="actionNext"
...
                            android:enabled="false"
                            android:textStyle="bold"
                            android:text="+62"
                            android:textSize="@dimen/fontNormal" />

                        <EditText
                            android:id="@+id/regist_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorAsiraText"
                            android:textStyle="bold"
                            android:hint="contoh: 82123456789"
                            android:imeOptions="actionDone"
...

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_25sdp"
...
