...
        android:layout_marginTop="10dp"
        android:textColor="@color/colorAsiraText"
        android:textSize="@dimen/fontNormal"
        tools:text="Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor Lorem ipsum dolor " />

    <LinearLayout
        android:id="@+id/lyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">

        <TextView
            android:id="@+id/btnYa"
...
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="Iya"
            android:textColor="#FFF" />

        <TextView
            android:id="@+id/btnBelum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="0.5"
            android:background="@drawable/border_button_blue"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="Tidak"
            android:textColor="@color/textColorAsira" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorAsiraAccent"
        android:text="Ok" />
</LinearLayout>
